--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ project(Emu68-tools VERSION 1.0.0)
 add_subdirectory(devicetree.resource)
 add_subdirectory(mailbox.resource)
 add_subdirectory(unicam.resource)
+add_subdirectory(i2c.library)
+add_subdirectory(SetClockI2C)
 add_subdirectory(EmuControl)
 add_subdirectory(VideoCore.card)
 
@@ -12,6 +14,8 @@ add_custom_target(Emu68-tools ALL
         devicetree.resource
         mailbox.resource
         unicam.resource
+        i2c.library
+        SetClockI2C
         VideoCore.card
         EmuControl
 )
