--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -20,7 +20,7 @@ jobs:
     - uses: actions/checkout@v2
       with: 
         submodules: 'true'
-    - run: cd Emu68Contribs && git checkout main && git pull --allow-unrelated-histories
+    # - run: cd Emu68Contribs && git checkout main && git pull --allow-unrelated-histories
 
     - name: Whitelist the repo
       # Some projects don't allow in-source building, so create a separate build directory
