Enable Emu68Contribs from Flype

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ add_subdirectory(SetClockI2C)
 add_subdirectory(EmuControl)
 add_subdirectory(VideoCore.card)
 add_subdirectory(BinaryContribs)
+add_subdirectory(Emu68Contribs)
 
 add_custom_target(Emu68-tools ALL
     DEPENDS
