--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -17,7 +17,7 @@ jobs:
       image: amigadev/crosstools:m68k-amigaos
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
       with: 
         submodules: 'true'
     # - run: cd Emu68Contribs && git checkout main && git pull --allow-unrelated-histories
@@ -49,12 +49,6 @@ jobs:
       # Execute the build.  You can specify a specific target with "--target <NAME>"
       run: cmake --build ${{runner.workspace}}/build --config $BUILD_TYPE -j$(nproc)
 
-    - name: Test
-      shell: bash
-      # Execute tests defined by the CMake configuration.  
-      # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: ctest -C $BUILD_TYPE
-    
     - name: Install
       shell: bash
       # Create ARIX directory structure and generate initrd file
@@ -74,12 +68,13 @@ jobs:
       with:
         name: emu68-archive
         path: ${{runner.workspace}}/Emu68-tools.zip
-        retention-days: 5
+        retention-days: 2
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    steps:  
+    if: github.ref_type == 'tag'
+    steps:
     - name: Download Artifact
       uses: actions/download-artifact@v4
       with:
@@ -87,9 +82,6 @@ jobs:
         path: ${{runner.workspace}}/uploads
     
     - name: Release
-      uses: softprops/action-gh-release@v1
-      if: startsWith(github.ref, 'refs/tags/')
+      uses: softprops/action-gh-release@v2
       with:
-        files: ${{runner.workspace}}/uploads/**
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        files: "${{runner.workspace}}/uploads/**"
