--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -74,6 +74,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     if: github.ref_type == 'tag'
+    permissions:
+      contents: write
     steps:
     - name: Download Artifact
       uses: actions/download-artifact@v4
