--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.14.0)
-project(Emu68-tools VERSION 1.0.1)
+project(Emu68-tools VERSION 1.1.0)
 
 add_subdirectory(devicetree.resource)
 add_subdirectory(mailbox.resource)
@@ -8,6 +8,7 @@ add_subdirectory(i2c.library)
 add_subdirectory(SetClockI2C)
 add_subdirectory(EmuControl)
 add_subdirectory(VideoCore.card)
+add_subdirectory(WiFiPi.device)
 add_subdirectory(BinaryContribs)
 add_subdirectory(Emu68Contribs)
 
@@ -19,6 +20,7 @@ add_custom_target(Emu68-tools ALL
         i2c.library
         SetClockI2C
         VideoCore.card
+        WiFiPi.device
         EmuControl
 )
 
